Solidify, vertex parent, refresh issue #35149

Closed
opened 2013-04-29 17:43:18 +02:00 by Nahuel Belich · 3 comments

%%%--- Operating System, Graphics card ---
Windows 7 x64
Nvidia 570 Drviver ver 301.42

- Blender version with error, and version that worked ---

the oldest version were i found the bug its 49710
a user at #blender irc told me that 46561 its working, i couldn´t verify this

- Short description of error ---

If an object its vetex parented to an object that has a solidify modifier on it, the child mesh will change its position when toggle to edit mode and back to object mode

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

1- Select the cube
2- toggle between edit and object mode

NOTE: if toggle to edit mode and then play forward when returning to objectmode the cube will keeps the right position.

%%%

%%%--- Operating System, Graphics card --- Windows 7 x64 Nvidia 570 Drviver ver 301.42 - Blender version with error, and version that worked --- the oldest version were i found the bug its 49710 a user at #blender irc told me that 46561 its working, i couldn´t verify this - Short description of error --- If an object its vetex parented to an object that has a solidify modifier on it, the child mesh will change its position when toggle to edit mode and back to object mode - Steps for others to reproduce the error (preferably based on attached .blend file) --- 1- Select the cube 2- toggle between edit and object mode NOTE: if toggle to edit mode and then play forward when returning to objectmode the cube will keeps the right position. %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Fix in svn, thanks for the report.%%%

%%%Fix in svn, thanks for the report.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#35149
No description provided.