source/blender/editors/include/ED_view3d.h
@@ -297,7 +297,6 @@ bool ED_view3d_lock(struct RegionView3D *rv3d);
 
 uint64_t ED_view3d_datamask(struct Scene *scene, struct View3D *v3d);
 uint64_t ED_view3d_screen_datamask(struct bScreen *screen);
-uint64_t ED_view3d_object_datamask(struct Scene *scene);
 
 /* camera lock functions */
 bool ED_view3d_camera_lock_check(struct View3D *v3d, struct RegionView3D *rv3d);
